<?xml version="1.0"?>
<package format="2">
  <name>tams_pr2_ssloc</name>
  <version>0.0.0</version>
  <description>launch wrapper for ssloc_ros</description>

  <maintainer email="goerner@informatik.uni-hamburg.de">Michael Goerner</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ssloc_ros</build_depend>
  <build_export_depend>ssloc_ros</build_export_depend>
  <exec_depend>ssloc_ros</exec_depend>
</package>
